[package]
name = "rs-fs-report"
version = "0.1.0"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]

[dependencies]
failure = "=0.1.1"
fruently = "=0.10.0"
fs2 = "=0.4.3"
log = "=0.4.1"
log4rs = "=0.8.0"
mega-coll = { git = "https://github.com/guangie88/rs-mega-coll.git", tag = "v0.1.0" }
serde = "=1.0.27"
serde_derive = "=1.0.27"
simple_logger = "=0.5.0"
structopt = "=0.2.4"
structopt-derive = "=0.2.4"

[[bin]]
name = "rs-fs-report"
path = "src/main.rs"